--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,10 @@ allprojects {
             name = "Progwml6 maven"
             url = "https://dvs1.progwml6.com/files/maven/"
         }
-        maven {
-            name = "ModMaven"
-            url = "https://modmaven.k-4u.nl/"
-        }
+//        maven {
+//            name = "ModMaven"
+//            url = "https://modmaven.k-4u.nl/"
+//        }
 //        maven {
 //            name = "TerraForged Maven Repository"
 //            url = "https://io.terraforged.com/repository/maven/"
