Environment variable can now disable Gradle datagen

--- a/MidnightMod/build.gradle
+++ b/MidnightMod/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-    embed( project( ':MidnightAPI' ) ) {
+    embed(project(':MidnightAPI')) {
         transitive false
     }
-    embed( project( ':MidnightCore' ) ) {
+    embed(project(':MidnightCore')) {
         transitive false
     }
 }
@@ -37,10 +37,10 @@ task genData(type: JavaExec) {
     // We must give the classpath as a raw path, otherwise gradle adds :classes as a dependency to this task. Since we
     // are a dependency of :classes itself this causes a circular dependency and therefore we must not have :classes as
     // dependency. Make sure not to use 'sourceSets.main.runtimeClasspath' or something relevant here
-    classpath files("$rootDir/MidnightAPI/build/classes/java/main")      \
-                + files("$rootDir/MidnightCore/build/classes/java/main") \
-                + files("$rootDir/MidnightMod/build/classes/java/main")  \
-                + configurations.runtime
+    classpath files("$rootDir/MidnightAPI/build/classes/java/main")         \
+                   + files("$rootDir/MidnightCore/build/classes/java/main") \
+                   + files("$rootDir/MidnightMod/build/classes/java/main")  \
+                   + configurations.runtime
 
     main "midnight.data.DataGen"
     args(
@@ -52,5 +52,6 @@ task genData(type: JavaExec) {
 }
 
 processResources {
-    dependsOn 'genData'
+    if (!System.getenv().containsKey("SKIP_DATAGEN"))
+        dependsOn 'genData'
 }
