--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -226,6 +226,8 @@ jobs:
       - name: Run test server
         uses: eskatos/gradle-command-action@v1
         continue-on-error: true
+        env:
+          SKIP_DATAGEN: true
         with:
           gradle-version: 4.10.3
           arguments: runTestServer --max-workers 1 -x downloadAssets
@@ -279,6 +281,8 @@ jobs:
       - name: Run test server
         uses: eskatos/gradle-command-action@v1
         continue-on-error: true
+        env:
+          SKIP_DATAGEN: true
         with:
           gradle-version: 4.10.3
           arguments: runTestServer --max-workers 1 -x downloadAssets
@@ -331,6 +335,8 @@ jobs:
       - name: Run test server
         uses: eskatos/gradle-command-action@v1
         continue-on-error: true
+        env:
+          SKIP_DATAGEN: true
         with:
           gradle-version: 4.10.3
           arguments: runTestServer --max-workers 1 -x downloadAssets
